Add ability to refactor index location when new item is added

--- a/style.css
+++ b/style.css
@@ -68,6 +68,10 @@ Lightest to Darkest
   color: #abc4ff;
 }
 
+tbody #deleteButton {
+  /*Empty, will possibly add styling to button later*/
+}
+
 .sidebar {
   background-color: #abc4ff;
   min-height: 100vh;
